@@ -45,6 +45,6 @@ src/session-manager-glue.h
 src/user-manager-glue.h
 src/ldm-marshal.c
 src/ldm-marshal.h
-data/org.freedesktop.LightDisplayManager.conf
+data/org.lightdm.LightDisplayManager.conf
 config.h
 config.h.in
