@@ -4,7 +4,7 @@ confdir = $(sysconfdir)
 conf_DATA = lightdm.conf
 
 dbusconfdir = $(DBUS_SYS_DIR)
-dbusconf_DATA = org.freedesktop.LightDisplayManager.conf
+dbusconf_DATA = org.lightdm.LightDisplayManager.conf
 
 man1_MANS = lightdm.1
 
