@@ -1,9 +1,9 @@
 <!DOCTYPE node PUBLIC "-//freedesktop//DTD D-BUS Object Introspection 1.0//EN" "http://www.freedesktop.org/standards/dbus/1.0/introspect.dtd">
 <node>
-  <interface name="org.freedesktop.LightDisplayManager.Display">
+  <interface name="org.lightdm.LightDisplayManager.Display">
   </interface>
 
-  <interface name="org.freedesktop.LightDisplayManager.Greeter">
+  <interface name="org.lightdm.LightDisplayManager.Greeter">
 
     <!-- Method for greeter to connect to display manager -->
     <method name="Connect">
@@ -15,7 +15,7 @@
 
     <!-- Method for greeter to start authenticating a user -->
     <method name="StartAuthentication">
-      <annotation name="org.freedesktop.DBus.GLib.Async" value="true"/>
+      <annotation name="org.lightdm.DBus.GLib.Async" value="true"/>
       <arg name="username" direction="in" type="s"/>
       <arg name="result" direction="out" type="i"/>
       <arg name="requests" direction="out" type="a(is)"/>
@@ -23,7 +23,7 @@
 
     <!-- Method for greeter to provide secrets for a user -->
     <method name="ContinueAuthentication">
-      <annotation name="org.freedesktop.DBus.GLib.Async" value="true"/>
+      <annotation name="org.lightdm.DBus.GLib.Async" value="true"/>
       <arg name="secrets" direction="in" type="as"/>
       <arg name="result" direction="out" type="i"/>
       <arg name="requests" direction="out" type="a(is)"/>
