@@ -1,6 +1,6 @@
 <!DOCTYPE node PUBLIC "-//freedesktop//DTD D-BUS Object Introspection 1.0//EN" "http://www.freedesktop.org/standards/dbus/1.0/introspect.dtd">
 <node>
-  <interface name="org.freedesktop.LightDisplayManager.Users">
+  <interface name="org.lightdm.LightDisplayManager.Users">
 
     <!-- Method to return the users -->
     <method name="GetUsers">
